@@ -1,8 +1,11 @@
 package org.opencds.cqf.fhir.cr.measure.r4;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
@@ -24,12 +27,14 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import javax.annotation.Nonnull;
 import org.cqframework.cql.cql2elm.LibraryManager;
 import org.cqframework.cql.cql2elm.ModelManager;
 import org.cqframework.cql.cql2elm.StringLibrarySourceProvider;
 import org.hl7.elm.r1.VersionedIdentifier;
 import org.hl7.fhir.dstu3.model.IdType;
+import org.hl7.fhir.r4.model.CodeType;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Enumerations.AdministrativeGender;
@@ -48,9 +53,12 @@ import org.hl7.fhir.r4.model.Observation;
 import org.hl7.fhir.r4.model.Patient;
 import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.StringType;
+import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.NullSource;
 import org.opencds.cqf.cql.engine.data.CompositeDataProvider;
 import org.opencds.cqf.cql.engine.data.DataProvider;
@@ -71,6 +79,9 @@ import org.opencds.cqf.fhir.utility.repository.ig.IgRepository;
 
 public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
 
+    private static final CodeType POPULATION_BASIS_BOOLEAN = new CodeType("boolean");
+    private static final CodeType POPULATION_BASIS_ENCOUNTER = new CodeType("Encounter");
+
     public String getFhirVersion() {
         return "4.0.1";
     }
@@ -81,7 +92,7 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
     private MeasureEvaluationOptions evaluationOptions = MeasureEvaluationOptions.defaultOptions();
 
     @Test
-    void cohortMeasureEvaluation() throws Exception {
+    void cohortMeasureEvaluation() {
         Patient patient = john_doe();
 
         RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
@@ -102,15 +113,17 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
 
         String cql = cql_with_dateTime() + sde_race() + "define InitialPopulation: 'Doe' in Patient.name.family\n";
 
+        System.out.println("cql = \n" + cql);
+
         Measure measure = cohort_measure();
 
         MeasureReport report =
                 runTest(cql, Collections.singletonList(patient.getId()), measure, retrieveProvider, null);
-        checkEvidence(patient, report);
+        checkEvidence(report);
     }
 
     @Test
-    void sdeInMeasureEvaluation() throws Exception {
+    void sdeInMeasureEvaluation() {
         Patient patient = john_doe();
 
         RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
@@ -131,15 +144,17 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
 
         String cql = cql_with_dateTime() + sde_race() + "define InitialPopulation: 'Doe' in Patient.name.family\n";
 
+        System.out.println("cql = \n" + cql);
+
         Measure measure = cohort_measure();
 
         MeasureReport report =
                 runTest(cql, Collections.singletonList(patient.getId()), measure, retrieveProvider, null);
-        checkEvidence(patient, report);
+        checkEvidence(report);
     }
 
     @Test
-    void proportionMeasureEvaluation() throws Exception {
+    void proportionMeasureEvaluation() {
         Patient patient = john_doe();
 
         RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
@@ -156,22 +171,24 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
                         any(),
                         any(),
                         any()))
-                .thenReturn(Arrays.asList(patient));
+                .thenReturn(List.of(patient));
 
         String cql = cql_with_dateTime() + sde_race()
                 + "define InitialPopulation: 'Doe' in Patient.name.family\n"
                 + "define Denominator: 'John' in Patient.name.given\n"
                 + "define Numerator: Patient.birthDate > @1970-01-01\n";
 
+        System.out.println("cql = \n" + cql);
+
         Measure measure = proportion_measure();
 
         MeasureReport report =
                 runTest(cql, Collections.singletonList(patient.getId()), measure, retrieveProvider, null);
-        checkEvidence(patient, report);
+        checkEvidence(report);
     }
 
     @Test
-    void proportionMeasureEvaluationWithDate() throws Exception {
+    void proportionMeasureEvaluationWithDate() {
         Patient patient = john_doe();
 
         RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
@@ -188,21 +205,23 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
                         any(),
                         any(),
                         any()))
-                .thenReturn(Arrays.asList(patient));
+                .thenReturn(List.of(patient));
 
         String cql = cql_with_date() + sde_race() + "define InitialPopulation: 'Doe' in Patient.name.family\n"
                 + "define Denominator: 'John' in Patient.name.given\n"
                 + "define Numerator: AgeInYearsAt(start of \"Measurement Period\") > 18\n";
 
+        System.out.println("cql = \n" + cql);
+
         Measure measure = proportion_measure();
 
         MeasureReport report =
                 runTest(cql, Collections.singletonList(patient.getId()), measure, retrieveProvider, null);
-        checkEvidence(patient, report);
+        checkEvidence(report);
     }
 
     @Test
-    void continuousVariableMeasureEvaluation() throws Exception {
+    void continuousVariableMeasureEvaluation() {
         Patient patient = john_doe();
 
         RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
@@ -219,18 +238,95 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
                         any(),
                         any(),
                         any()))
-                .thenReturn(Arrays.asList(patient));
+                .thenReturn(List.of(patient));
 
         String cql = cql_with_dateTime() + sde_race()
                 + "define InitialPopulation: 'Doe' in Patient.name.family\n"
                 + "define MeasurePopulation: Patient.birthDate > @1970-01-01\n";
 
+        System.out.println("cql = \n" + cql);
+
         Measure measure = continuous_variable_measure();
+
+        printResource(measure);
 
         MeasureReport report =
                 runTest(cql, Collections.singletonList(patient.getId()), measure, retrieveProvider, null);
-        checkEvidence(patient, report);
+        checkEvidence(report);
     }
+
+    // LUKETODO: 600 cleanup:
+    @Language("JSON")
+    final String json =
+            """
+            {
+              "resourceType": "Measure",
+              "id": "proportion",
+              "url": "http://test.com/fhir/Measure/Test",
+              "version": "1.0.0",
+              "name": "Test",
+              "scoring": {
+                "coding": [ {
+                  "code": "proportion"
+                } ]
+              },
+              "group": [ {
+                "population": [ {
+                  "id": "initial-population",
+                  "code": {
+                    "coding": [ {
+                      "code": "initial-population"
+                    } ]
+                  },
+                  "criteria": {
+                    "expression": "InitialPopulation"
+                  }
+                }, {
+                  "id": "denominator",
+                  "code": {
+                    "coding": [ {
+                      "code": "denominator"
+                    } ]
+                  },
+                  "criteria": {
+                    "expression": "Denominator"
+                  }
+                }, {
+                  "id": "numerator",
+                  "code": {
+                    "coding": [ {
+                      "code": "numerator"
+                    } ]
+                  },
+                  "criteria": {
+                    "expression": "Numerator"
+                  }
+                } ],
+                "stratifier": [ {
+                  "id": "patient-gender",
+                  "criteria": {
+                    "expression": "Gender"
+                  }
+                } ]
+              } ],
+              "supplementalData": [ {
+                "id": "sde-race",
+                "code": {
+                  "text": "sde-race"
+                },
+                "usage": [ {
+                  "coding": [ {
+                    "system": "http://terminology.hl7.org/CodeSystem/measure-data-usage",
+                    "code": "supplemental-data"
+                  } ]
+                } ],
+                "criteria": {
+                  "language": "text/cql",
+                  "expression": "SDE Race"
+                }
+              } ]
+            }
+        """;
 
     // Prove we no longer error out for a SUBJECT report with multiple SDEs
     @ParameterizedTest
@@ -239,68 +335,116 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
             value = MeasureEvalType.class,
             names = {"SUBJECT", "SUBJECTLIST", "POPULATION"})
     void stratifiedMeasureEvaluation(@Nullable MeasureEvalType measureEvalTypeOverride) {
-        RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
-        when(retrieveProvider.retrieve(
-                        isNull(),
-                        isNull(),
-                        isNull(),
-                        eq("Patient"),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any()))
-                .thenReturn(Arrays.asList(jane_doe(), john_doe()));
-        when(retrieveProvider.retrieve(
-                        eq("Patient"),
-                        eq("id"),
-                        eq("john-doe"),
-                        eq("Patient"),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any()))
-                .thenReturn(Arrays.asList(john_doe()));
-        when(retrieveProvider.retrieve(
-                        eq("Patient"),
-                        eq("id"),
-                        eq("jane-doe"),
-                        eq("Patient"),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any(),
-                        any()))
-                .thenReturn(Arrays.asList(jane_doe()));
 
-        String cql = cql_with_dateTime() + sde_race()
+        final String cql = cql_with_dateTime() + sde_race()
                 + "define InitialPopulation: 'Doe' in Patient.name.family\n"
                 + "define Denominator: 'John' in Patient.name.given\n"
                 + "define Numerator: Patient.birthDate > @1970-01-01\n" + "define Gender: Patient.gender\n";
 
-        Measure measure = stratified_measure();
+        System.out.println("cql = \n" + cql);
 
-        MeasureReport report = runTest(
+        final MeasureReport report = runTest(
                 cql,
                 Arrays.asList(jane_doe().getId(), john_doe().getId()),
-                measure,
-                retrieveProvider,
+                stratified_measure(),
+                setupMockRetrieverProvider(),
                 measureEvalTypeOverride);
         checkStratification(report);
     }
 
+    private static Stream<Arguments> stratifiedMeasureEvaluationByPopulationBasisHappyPathParams() {
+        return Stream.of(
+                Arguments.of(null, null),
+                Arguments.of(POPULATION_BASIS_BOOLEAN, POPULATION_BASIS_BOOLEAN),
+                Arguments.of(POPULATION_BASIS_BOOLEAN, POPULATION_BASIS_ENCOUNTER));
+    }
+
+    @ParameterizedTest
+    @MethodSource("stratifiedMeasureEvaluationByPopulationBasisHappyPathParams")
+    void stratifiedMeasureEvaluationByPopulationHappyPathBasis(
+            @Nullable CodeType populationBasisTypeForMeasure, @Nullable CodeType populationBasisTypeForGroup) {
+        final String cql = cql_with_dateTime() + sde_race()
+                + "define InitialPopulation: 'Doe' in Patient.name.family\n"
+                + "define Denominator: 'John' in Patient.name.given\n"
+                + "define Numerator: Patient.birthDate > @1970-01-01\n" + "define Gender: Patient.gender\n";
+
+        System.out.println("cql = \n" + cql);
+
+        final MeasureReport report = runTest(
+                cql,
+                Arrays.asList(jane_doe().getId(), john_doe().getId()),
+                stratified_measure(populationBasisTypeForMeasure, populationBasisTypeForGroup),
+                setupMockRetrieverProvider(),
+                null);
+        checkStratification(report);
+    }
+
+    private static Stream<Arguments> stratifiedMeasureEvaluationByPopulationBasisErrorPathParams() {
+        return Stream.of(
+                Arguments.of(POPULATION_BASIS_ENCOUNTER, POPULATION_BASIS_BOOLEAN),
+                Arguments.of(POPULATION_BASIS_ENCOUNTER, POPULATION_BASIS_ENCOUNTER));
+    }
+
+    // LUKETODO:  600  how do I set up this test to prove that GroupDef criteria expressions are properly validated?
+    // LUKETODO:  600  can I just shove "SDE Race" into the Numerator expression and call it a day?
+    @ParameterizedTest
+    @MethodSource("stratifiedMeasureEvaluationByPopulationBasisErrorPathParams")
+    void stratifiedMeasureEvaluationByPopulationErrorPathBasis(
+            @Nullable CodeType populationBasisTypeForMeasure, @Nullable CodeType populationBasisTypeForGroup) {
+        final String cql = cql_with_dateTime() + sde_race() +
+            """
+            define InitialPopulation: 'Doe' in Patient.name.family
+            define Denominator: 'John' in Patient.name.given
+            define Numerator: Patient.birthDate > @1970-01-01
+            define Gender: Patient.gender
+            """;
+
+        // LUKETODO:  cleanup
+        System.out.println("cql = \n" + cql);
+
+        // LUKETODO:  cleanup
+        var x =
+                """
+        library Test version '1.0.0'
+
+        using FHIR version '4.0.1'
+        include FHIRHelpers version '4.0.1'
+
+        parameter "Measurement Period" Interval<DateTime> default Interval[@2019-01-01T00:00:00.0, @2020-01-01T00:00:00.0)
+
+        context Patient
+        define "SDE Race":
+          (flatten (
+            Patient.extension Extension
+              where Extension.url = 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-race'
+                return Extension.extension
+          )) E
+            where E.url = 'ombCategory'
+              or E.url = 'detailed'
+            return E.value as Coding
+
+        define InitialPopulation: 'Doe' in Patient.name.family
+        define Denominator: 'John' in Patient.name.given
+        define Numerator: Patient.birthDate > @1970-01-01
+        """;
+
+        try {
+            runTest(
+                    cql,
+                    List.of(jane_doe().getId(), john_doe().getId()),
+                    stratified_measure(populationBasisTypeForMeasure, populationBasisTypeForGroup),
+                    setupMockRetrieverProvider(),
+                    null);
+            fail("expected IllegalArgumentException");
+        } catch (IllegalArgumentException exception) {
+            assertThat(
+                    exception.getMessage(),
+                    equalTo("stratifier expression criteria results must match the same type as population."));
+        }
+    }
+
     @Test
-    void evaluatePopulationCriteriaNullResult() throws Exception {
+    void evaluatePopulationCriteriaNullResult() {
         Patient patient = john_doe();
 
         RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
@@ -317,7 +461,7 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
                         any(),
                         any(),
                         any()))
-                .thenReturn(Arrays.asList(patient));
+                .thenReturn(List.of(patient));
 
         String cql = cql_with_dateTime() + sde_race() + "define InitialPopulation: null\n"
                 + "define Denominator: null\n" + "define Numerator: null\n";
@@ -326,7 +470,7 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
 
         MeasureReport report =
                 runTest(cql, Collections.singletonList(patient.getId()), measure, retrieveProvider, null);
-        checkEvidence(patient, report);
+        checkEvidence(report);
     }
 
     private void checkStratification(MeasureReport report) {
@@ -337,14 +481,14 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
         StratifierGroupComponent sgc = mrgsc.getStratum().stream()
                 .filter(x -> x.hasValue() && x.getValue().getText().equals("male"))
                 .findFirst()
-                .get();
+                .orElseThrow();
         StratifierGroupPopulationComponent sgpc = sgc.getPopulation().stream()
                 .filter(x -> x.getCode()
                         .getCodingFirstRep()
                         .getCode()
                         .equals(MeasurePopulationType.INITIALPOPULATION.toCode()))
                 .findFirst()
-                .get();
+                .orElseThrow();
 
         assertEquals(1, sgpc.getCount());
 
@@ -413,7 +557,7 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
                 .orElse(subjectIds.size() == 1 ? MeasureEvalType.SUBJECT : MeasureEvalType.POPULATION);
     }
 
-    private void checkEvidence(Patient patient, MeasureReport report) {
+    private void checkEvidence(MeasureReport report) {
         Map<String, Resource> contained = report.getContained().stream()
                 .collect(Collectors.toMap(r -> r.getClass().getSimpleName(), Function.identity()));
 
@@ -441,11 +585,17 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
     }
 
     private Measure proportion_measure() {
+        return proportion_measure(null, null);
+    }
 
-        Measure measure = measure("proportion");
+    private Measure proportion_measure(
+            @Nullable CodeType populationBasisTypeForMeasure, @Nullable CodeType populationBasisTypeForGroup) {
+
+        Measure measure = measure("proportion", populationBasisTypeForMeasure, populationBasisTypeForGroup);
         addPopulation(measure, MeasurePopulationType.INITIALPOPULATION, "InitialPopulation");
         addPopulation(measure, MeasurePopulationType.DENOMINATOR, "Denominator");
-        addPopulation(measure, MeasurePopulationType.NUMERATOR, "Numerator");
+//        addPopulation(measure, MeasurePopulationType.NUMERATOR, "Numerator");
+        addPopulation(measure, MeasurePopulationType.NUMERATOR, "SDE Race");
         addSDEComponent(measure);
 
         return measure;
@@ -458,11 +608,20 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
         addPopulation(measure, MeasurePopulationType.MEASUREPOPULATION, "MeasurePopulation");
         addSDEComponent(measure);
 
+        printResource(measure);
+
         return measure;
     }
 
     private Measure stratified_measure() {
-        Measure measure = proportion_measure();
+        Measure measure = proportion_measure(null, null);
+        addStratifier(measure, "patient-gender", "Gender");
+        return measure;
+    }
+
+    private Measure stratified_measure(
+            @Nullable CodeType populationBasisTypeForMeasure, @Nullable CodeType populationBasisTypeForGroup) {
+        Measure measure = proportion_measure(populationBasisTypeForMeasure, populationBasisTypeForGroup);
         addStratifier(measure, "patient-gender", "Gender");
         return measure;
     }
@@ -492,12 +651,28 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
     }
 
     private Measure measure(String scoring) {
+        return measure(scoring, null, null);
+    }
+
+    private Measure measure(
+            String scoring,
+            @Nullable CodeType populationBasisTypeForMeasure,
+            @Nullable CodeType populationBasisTypeForGroup) {
         Measure measure = new Measure();
         measure.setId(scoring);
         measure.setName("Test");
         measure.setVersion("1.0.0");
         measure.setUrl("http://test.com/fhir/Measure/Test");
         measure.getScoring().getCodingFirstRep().setCode(scoring);
+        Optional.ofNullable(populationBasisTypeForMeasure)
+                .ifPresent(nonNullPopulationBasisType -> measure.addExtension(new Extension()
+                        .setUrl(MeasureConstants.POPULATION_BASIS_URL)
+                        .setValue(populationBasisTypeForMeasure)));
+        Optional.ofNullable(populationBasisTypeForGroup)
+                .ifPresent(nonNullPopulationBasisType -> measure.getGroupFirstRep()
+                        .addExtension(new Extension()
+                                .setUrl(MeasureConstants.POPULATION_BASIS_URL)
+                                .setValue(populationBasisTypeForMeasure)));
         return measure;
     }
 
@@ -515,8 +690,7 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
     private Patient john_doe() {
         Patient patient = new Patient();
         patient.setId(new IdType("Patient", "john-doe"));
-        patient.setName(
-                Arrays.asList(new HumanName().setFamily("Doe").setGiven(Arrays.asList(new StringType("John")))));
+        patient.setName(List.of(new HumanName().setFamily("Doe").setGiven(List.of(new StringType("John")))));
         patient.setBirthDate(new Date());
         patient.setGender(AdministrativeGender.MALE);
 
@@ -544,8 +718,7 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
     private Patient jane_doe() {
         Patient patient = new Patient();
         patient.setId(new IdType("Patient", "jane-doe"));
-        patient.setName(
-                Arrays.asList(new HumanName().setFamily("Doe").setGiven(Arrays.asList(new StringType("Jane")))));
+        patient.setName(List.of(new HumanName().setFamily("Doe").setGiven(List.of(new StringType("Jane")))));
         patient.setBirthDate(new Date());
         patient.setGender(AdministrativeGender.FEMALE);
 
@@ -560,5 +733,60 @@ public class R4MeasureEvaluationTest extends BaseMeasureEvaluationTest {
                         .setDisplay(BLACK_OR_AFRICAN_AMERICAN));
         patient.getExtension().add(usCoreRace);
         return patient;
+    }
+
+    @Nonnull
+    private RetrieveProvider setupMockRetrieverProvider() {
+        RetrieveProvider retrieveProvider = mock(RetrieveProvider.class);
+        when(retrieveProvider.retrieve(
+                        isNull(),
+                        isNull(),
+                        isNull(),
+                        eq("Patient"),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any()))
+                .thenReturn(Arrays.asList(jane_doe(), john_doe()));
+        when(retrieveProvider.retrieve(
+                        eq("Patient"),
+                        eq("id"),
+                        eq("john-doe"),
+                        eq("Patient"),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any()))
+                .thenReturn(List.of(john_doe()));
+        when(retrieveProvider.retrieve(
+                        eq("Patient"),
+                        eq("id"),
+                        eq("jane-doe"),
+                        eq("Patient"),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any(),
+                        any()))
+                .thenReturn(List.of(jane_doe()));
+        return retrieveProvider;
+    }
+
+    private void printResource(Resource resource) {
+        final String json =
+                FhirContext.forR4Cached().newJsonParser().setPrettyPrint(true).encodeResourceToString(resource);
+
+        System.out.println("json = \n" + json);
     }
 }
